@@ -223,6 +223,11 @@ if you want to draw on the screen directly use @code{x-draw-text}
 @item Removed Features
 
 @itemize @minus
+@item @code{old-window-menu} [Christopher Bratusek]
+
+The @code{old-window-menu} was replaced by @code{beos-window-menu}
+a long time ago in version 0.28.1. Now it is reomved.
+
 @item @code{test-widget} function [Christopher Bratusek]
 
 The @code{test-widget} function is heavily broken and crashes Sawfish
